@@ -1,3 +1,8 @@
+2023-08-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pvm-alloc.h (GC_THREADS): New cpp define.
+	(pvm_alloc_register_thread): Remove `const' qualifier from local var.
+
 2023-08-26  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm-alloc.h: Fix prototypes for
